# multichat

./: .multichat_session.json  AGENTS.md  pyproject.toml  readme.md
.github/workflows/: pypi.yml  release.yml
multichat/: llm.py  main.py
tests/: test_placeholder.py
