
[project]
name = "multichat"
version = "0.2.0"
description = "CLI to send the same message to multiple LLMs and returns their responses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["any-llm-sdk[anthropic,google,openai,xai]>=0.16.0"]

[project.scripts]
multichat = "multichat.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
